// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alexa TDN should flow into Information and back 1`] = `
Object {
  "response": Object {
    "directives": Array [],
    "outputSpeech": Object {
      "ssml": "<speak><p>Der Tag der Niedersachsen 2017 findet zum 35. Mal statt. Nach 1983 und 2005 ist Wolfsburg nun zum dritten Mal Ausrichterstadt.</p><p>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {},
  "version": "1.0",
}
`;

exports[`Alexa TDN should handle LaunchRequest 1`] = `
Object {
  "response": Object {
    "card": Object {
      "image": Object {
        "largeImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/logo.large.png",
        "smallImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/logo.small.png",
      },
      "text": "Sage Informationen für Allgemeine Informationen oder Programm für eine Programmübersicht.",
      "title": "Willkommen zum 35. Tag der Niedersachsen im Jahr 2017",
      "type": "Standard",
    },
    "directives": Array [],
    "outputSpeech": Object {
      "ssml": "<speak><p>Willkommen zum 35. \\"Tag der Niedersachsen\\" im Jahr 2017. <break /> Ich habe allgemeine Informationen oder eine Programmübersicht.</p><p>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {},
  "version": "1.0",
}
`;

exports[`Alexa TDN should invoke IntentRequest 1`] = `
Object {
  "response": Object {
    "card": Object {
      "content": "Der Tag der Niedersachsen 2017 findet zum 35. Mal statt. Nach 1983 und 2005 ist Wolfsburg nun zum dritten Mal Ausrichterstadt.",
      "title": "Allgemeine Informationen",
      "type": "Standard",
    },
    "directives": Array [],
    "outputSpeech": Object {
      "text": "Der Tag der Niedersachsen 2017 findet zum 35. Mal statt. Nach 1983 und 2005 ist Wolfsburg nun zum dritten Mal Ausrichterstadt.",
      "type": "PlainText",
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {},
  "version": "1.0",
}
`;

exports[`Alexa TDN should invoke IntentRequest on new session 1`] = `
Object {
  "response": Object {
    "card": Object {
      "content": "Der Tag der Niedersachsen 2017 findet zum 35. Mal statt. Nach 1983 und 2005 ist Wolfsburg nun zum dritten Mal Ausrichterstadt.",
      "title": "Allgemeine Informationen",
      "type": "Standard",
    },
    "directives": Array [],
    "outputSpeech": Object {
      "text": "Der Tag der Niedersachsen 2017 findet zum 35. Mal statt. Nach 1983 und 2005 ist Wolfsburg nun zum dritten Mal Ausrichterstadt.",
      "type": "PlainText",
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {},
  "version": "1.0",
}
`;
